--- a/packages/module/src/main.scss
+++ b/packages/module/src/main.scss
@@ -33,58 +33,6 @@
 @import './SourceDetailsMenuItem/SourceDetailsMenuItem';
 @import './TermsOfUse/TermsOfUse';
 
-:where(:root) {
-  // ============================================================================
-  // Chatbot Custom Default Tokens
-  // ============================================================================
-
-  --pf-t--chatbot--heading--font-family: var(
-    --pf-v6-c-content--heading--FontFamily,
-    redhatdisplayvf,
-    redhatdisplay,
-    helvetica,
-    arial,
-    sans-serif
-  );
-
-  --pf-t--chatbot--illustration--fill: var(--pf-t--color--red--50);
-  --pf-t--chatbot--code--background: var(--pf-t--color--gray--20);
-
-  --pf-t--chatbot-toggle--background--hover: var(--pf-t--color--gray--70);
-
-  --pf-t--chatbot--blue-icon--background--color--hover: rgba(
-    146,
-    197,
-    249,
-    0.25
-  ); // --pf-t--global--color--nonstatus--blue--default @ 25%
-  --pf-t--chatbot--blue-icon--fill--hover: var(--pf-t--global--color--brand--hover);
-
-  // ============================================================================
-  // Chatbot Default tokens using PF semantic tokens
-  // ============================================================================
-  --pf-t--chatbot-toggle--color: var(--pf-t--global--icon--color--inverse);
-  --pf-t--chatbot--background: var(--pf-t--global--background--color--secondary--default);
-  --pf-t--chatbot--border: var(--pf-t--global--border--color--default);
-
-  --pf-t--chatbot--icon--fill--active: var(--pf-t--global--text--color--regular);
-
-  --pf-t--chatbot--blue-icon--fill: var(--pf-t--global--color--brand--default);
-}
-
-// ============================================================================
-// Chatbot Custom Dark Theme Tokens
-// ============================================================================
-:where(.pf-v6-theme-dark) {
-  --pf-t--chatbot--illustration--fill: var(--pf-t--color--white);
-  --pf-t--chatbot--code--background: var(--pf-t--color--gray--60);
-
-  --pf-t--chatbot-toggle--background--hover: var(--pf-t--color--gray--20);
-
-  --pf-t--chatbot--blue-icon--background--color--hover: var(--pf-t--global--color--brand--hover);
-  --pf-t--chatbot--blue-icon--fill--hover: var(--pf-t--global--icon--color--inverse);
-}
-
 .ws-full-page-utils {
   left: 0 !important;
   right: auto !important;
